[gd_scene load_steps=22 format=3 uid="uid://xkgsdj68abw3"]

[ext_resource type="Script" path="res://Character/EnemyCharacter_AI/Boss2/GD_Boss2_AI.gd" id="1_0srun"]
[ext_resource type="Texture2D" uid="uid://ct1jkcn3lj0uy" path="res://Character/EnemyCharacter_AI/Boss2/I_Boss2.png" id="2_2emij"]
[ext_resource type="PackedScene" uid="uid://dsskmi02nper0" path="res://Character/PlayerCharacter/Ui/S_GaugeBar.tscn" id="3_cxmdx"]
[ext_resource type="AudioStream" uid="uid://b6mrujj88cfnt" path="res://Audio/Character/Boss2/Boss2_hurt.mp3" id="5_0xl0g"]
[ext_resource type="AudioStream" uid="uid://crvh5b562pwqp" path="res://Audio/basic/melee.mp3" id="6_bkra0"]
[ext_resource type="AudioStream" uid="uid://c4m160wdity7f" path="res://Audio/basic/walk.mp3" id="7_0jcgl"]
[ext_resource type="Texture2D" uid="uid://bj1fytkfm377j" path="res://Character/EnemyCharacter_Test/Boss2/Boss2.png" id="10_o3mxj"]
[ext_resource type="PackedScene" uid="uid://cagawxjdpn61t" path="res://Skills/Movement/Move/S_Move.tscn" id="11_tqcuh"]
[ext_resource type="PackedScene" uid="uid://dr8bt77t5fa85" path="res://Skills/Basic_Atk/Punch/S_Punch.tscn" id="12_n54ov"]
[ext_resource type="PackedScene" uid="uid://mikbcnflpeb0" path="res://Skills/Boss2/Thunder/S_Thunder.tscn" id="13_ox47l"]
[ext_resource type="PackedScene" uid="uid://dhap8jxlgxb55" path="res://Skills/Boss2/Sweep/S_Sweep.tscn" id="14_d5u77"]

[sub_resource type="Animation" id="Animation_lsid7"]
resource_name = "Death"
length = 1.00001
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.958333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_0xl0g")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-15.0]
}

[sub_resource type="Animation" id="Animation_76wfh"]
resource_name = "Hurt"
length = 0.25
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.208333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"return_to_idle"
}]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_0xl0g")
}],
"times": PackedFloat32Array(-0.2919)
}
tracks/2/use_blend = true
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-15.0]
}

[sub_resource type="Animation" id="Animation_h4dee"]
resource_name = "Idle"
length = 0.458338
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_imsbf"]
resource_name = "Punch"
length = 0.625004
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"trigger"
}]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_bkra0")
}],
"times": PackedFloat32Array(0.1668)
}
tracks/2/use_blend = true
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-7.0]
}

[sub_resource type="Animation" id="Animation_h5pqb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_qti31"]
resource_name = "Shuriken"
length = 0.500005
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"trigger"
}]
}

[sub_resource type="Animation" id="Animation_xuxal"]
resource_name = "Sweep"
length = 0.625005
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"trigger"
}]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_bkra0")
}],
"times": PackedFloat32Array(0.2085)
}
tracks/2/use_blend = true
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.625005),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-7.0]
}

[sub_resource type="Animation" id="Animation_xhfwb"]
resource_name = "Thunder"
length = 3.5
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 0.583333, 0.625, 0.666667, 0.708333, 0.75, 0.791667, 0.833333, 0.875, 0.916667, 0.958333, 1, 1.04167, 1.08333, 1.125, 1.16667, 1.20833, 1.25, 1.29167, 1.33333, 1.375, 1.41667, 1.45833, 1.5, 1.54167, 1.58333, 1.625, 1.66667, 1.70833, 1.79167, 1.875, 1.95833, 2.04167, 2.125, 2.20833, 2.29167, 2.375, 2.45833, 2.54167, 2.625, 2.70833, 2.79167, 2.83333, 2.875, 2.91667, 2.95833, 3, 3.04167, 3.08333, 3.125, 3.16667, 3.20833, 3.25, 3.29167, 3.33333, 3.375, 3.41667, 3.45833, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7), Vector2i(2, 7), Vector2i(3, 7), Vector2i(4, 7), Vector2i(5, 7), Vector2i(6, 7), Vector2i(7, 7), Vector2i(8, 7), Vector2i(9, 7), Vector2i(10, 7), Vector2i(11, 7), Vector2i(12, 7), Vector2i(13, 7), Vector2i(14, 7), Vector2i(15, 7), Vector2i(16, 7), Vector2i(17, 7), Vector2i(18, 7), Vector2i(19, 7), Vector2i(20, 7), Vector2i(21, 7), Vector2i(22, 7), Vector2i(23, 7), Vector2i(24, 7), Vector2i(25, 7), Vector2i(26, 7), Vector2i(27, 7), Vector2i(28, 7), Vector2i(29, 7), Vector2i(30, 7), Vector2i(31, 7), Vector2i(32, 7), Vector2i(33, 7), Vector2i(34, 7), Vector2i(35, 7), Vector2i(36, 7), Vector2i(37, 7), Vector2i(38, 7), Vector2i(39, 7), Vector2i(40, 7), Vector2i(41, 7), Vector2i(42, 7), Vector2i(43, 7), Vector2i(44, 7), Vector2i(45, 7), Vector2i(46, 7), Vector2i(47, 7), Vector2i(48, 7), Vector2i(49, 7), Vector2i(50, 7), Vector2i(51, 7), Vector2i(52, 7), Vector2i(51, 7), Vector2i(53, 7), Vector2i(54, 7), Vector2i(55, 7), Vector2i(56, 7), Vector2i(57, 7), Vector2i(58, 7), Vector2i(59, 7), Vector2i(60, 7), Vector2i(61, 7), Vector2i(62, 7), Vector2i(63, 7), Vector2i(64, 7), Vector2i(65, 7), Vector2i(66, 7), Vector2i(67, 7), Vector2i(68, 7), Vector2i(69, 7), Vector2i(70, 7)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.70833),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"trigger"
}]
}

[sub_resource type="Animation" id="Animation_q4stp"]
resource_name = "Walk"
length = 0.750004
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 7.0,
"start_offset": 2.0,
"stream": ExtResource("7_0jcgl")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-7.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xmd81"]
_data = {
"Death": SubResource("Animation_lsid7"),
"Hurt": SubResource("Animation_76wfh"),
"Idle": SubResource("Animation_h4dee"),
"Punch": SubResource("Animation_imsbf"),
"RESET": SubResource("Animation_h5pqb"),
"Shuriken": SubResource("Animation_qti31"),
"Sweep": SubResource("Animation_xuxal"),
"Thunder": SubResource("Animation_xhfwb"),
"Walk": SubResource("Animation_q4stp")
}

[node name="S_Boss2_AI" type="Node2D" groups=["character"]]
scale = Vector2(3, 3)
script = ExtResource("1_0srun")
start_atk = 7
start_speed = 9
start_max_health = 18
icon_texture = ExtResource("2_2emij")

[node name="S_GaugeBar" parent="." instance=ExtResource("3_cxmdx")]
offset_left = -20.0
offset_top = -68.0
offset_right = -20.0
offset_bottom = -68.0

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 3
y_sort_enabled = true
texture_filter = 1
texture = ExtResource("10_o3mxj")
offset = Vector2(0, -30)
hframes = 71
vframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_xmd81")
}

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="MoveTimer" type="Timer" parent="."]
one_shot = true

[node name="SkillsList" type="Node2D" parent="."]

[node name="S_Move" parent="SkillsList" instance=ExtResource("11_tqcuh")]

[node name="S_Punch" parent="SkillsList" instance=ExtResource("12_n54ov")]

[node name="S_Thunder" parent="SkillsList" instance=ExtResource("13_ox47l")]

[node name="S_Sweep" parent="SkillsList" instance=ExtResource("14_d5u77")]

[node name="HealthBar" type="Sprite2D" parent="."]
position = Vector2(809, 575)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
